--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
-{
-    "python.analysis.extraPaths": [
-        "./app/FoodStorage"
-    ]
+{   "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./tests/.",
+        "-p",
+        "test_*.py"
+    ],
+    "python.testing.unittestEnabled": true,
 }
